--- a/frontend/package.json
+++ b/frontend/package.json
@@ -81,6 +81,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "vite_react_shadcn_ts": "file:..",
+    "web3": "^4.16.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -90,6 +91,7 @@
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/web3": "^1.0.20",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
